--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PiccollageQuiz</string>
+    <string name="alert_title">Oops</string>
+    <string name="alert_message">Something went wrong, please try again.</string>
+    <string name="label_ok">Okay</string>
 </resources>
