--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="alert_title">Oops</string>
     <string name="alert_message">Something went wrong, please try again.</string>
     <string name="label_ok">Okay</string>
+    <string name="label_demo">DEMO</string>
 </resources>
